<resources>
    <string name="app_name">Resume</string>
    <string name="pr1">\u2022Symposium Management System</string>
    <string name="pr_des1">\tThis program allows students to enroll for a college symposium and it\'s workshop. It allows the admin to view the participants and the winners.</string>
    <string name="pr2">\n\u2022Sign-up application</string>
    <string name="pr_des2">\tA simple sign-up and login application with more concentration on the backend rather than the frontend. I\'ve used MySQL for database storage and Nodejs for connecting to the database and used HBS.</string>
    <string name="abt">\npersonal details\n</string>
    <string name="pr3">\n\u2022Count of each word in a file</string>
    <string name="pr_des3">\tCounts the number of each word in a file using Hash tables.</string>
    <string name="pr4">\n\u2022Calculator app</string>
    <string name="pr_des4">\tAn android app for mathematical calculations.</string>
    <string name="pr5">\n\u2022Resume app</string>
    <string name="pr_des5">\tAn app about me and you are looking right at it.\n\n</string>
    <string name="pr">A look at my projects.</string>
    <string name="intro">\tI\'m a second year undergraduate student pursuing B.E. Computer Science and Engineering.I\'m an aspiring developer.I\'m currently looking for internship opportunities in development and data analytics sector. I have keen interset in core CS topics like ML, data analytics etc. </string>
    <string name="papa">\u2022Father\'s name : K.Rajakumar</string>
    <string name="dob">\u2022Date Of Birth : 23 May,1999</string>
    <string name="sex">\u2022Sex : Female</string>
    <string name="citizen">\u2022Citizenship : Indian</string>
    <string name="clg">\n\u2022B.E. Computer Science(2016\u002D2020)</string>
    <string name="clg_details">\tCollege Of Engineering,Guindy</string>
    <string name="clg_per">\tPercentage :  95.6%\n</string>
    <string name="hsc">\u2022XII(Senior Sceondary),Science</string>
    <string name="hsc_details">\tYear of Completion : 2016\n\tTamilNadu State Board(Zion Matriculation Higher Secondary School)</string>
    <string name="hsc_per">\tPercentage : 98.5%\n</string>
    <string name="sslc">\u2022X(Secondary)</string>
    <string name="sslc_details">\tYear of Completion : 2016\n\tTamilNadu State Board(Zion Matriculation Higher Secondary School)</string>
    <string name="sslc_per">\tPercentage : 99.4%\n</string>
    <string name="s1">\u2022C\n</string>
    <string name="s2">\u2022C++\n</string>
    <string name="s3">\u2022Java\n</string>
    <string name="s4">\u2022Android\n</string>
    <string name="s5">\u2022Python\n</string>
    <string name="s6">\u2022MySQL\n</string>
    <string name="s7">\u2022HTML\n</string>
    <string name="s8">\u2022CSS\n</string>
    <string name="r1">\u2022Co-ordinator in Team Industry Relations at CEG Tech Forum\n</string>
    <string name="r2">\u2022Co-ordinator in Team Industry Relations at CSEA\n</string>
    <string name="r3">\u2022Volunteer at NSS Unit-4\n</string>
    <string name="r4">\u2022Member of CEGLUG,a FOSS enthusiasts group\n</string>
    <string name="r5">\u2022Senior Finance Officer in Capitalize,the Entrepreneurship club of CEG\n</string>
    <string name="r6">\u2022House Vice Captain of School House Team\n</string>
    <string name="w1">\u2022E-Cell Delhi Technological University</string>
    <string name="w1_d">\tCampus Ambassabor</string>
    <string name="w1_t">\tOctober 2017 \u002D January 2018\n</string>
    <string name="w2">\u2022Nearbuy, Groupon</string>
    <string name="w2_d">\tCampus Ambassabor</string>
    <string name="w2_t">\tFebruary 2018 \u002D Present</string>
    <string name="a1">\u2022Secured Third prize in Code for Queens,a coding event conducted by DCSE,Anna University as a part of Sync\'17,an intracollege technical symposium.\n</string>
    <string name="a2">\u2022Secures State third in X Std Board Exams.\n</string>
    <string name="i1">\u2022Data structuring</string>
    <string name="i2">\u2022Database Management System</string>
    <string name="i3">\u2022Data Structures</string>
    <string name="i4">\u2022Algorithms</string>
    <string name="i5">\u2022Software Development\n</string>
    <string name="h1">\u2022Reading Books</string>
    <string name="h2">\u2022Cycling</string>
    <string name="h3">\u2022Social media surfing\n</string>
</resources>
